--- a/web/modules/custom/trainee_user/templates/trainee-user-list.html.twig
+++ b/web/modules/custom/trainee_user/templates/trainee-user-list.html.twig
@@ -1,6 +1,6 @@
 <section>
   <div>
-    <a href="{{ routes.add }}" class="{{ attributes.button.class }}"> {{ button_text.add }}</a>
+    <a href="{{ path(routes.add) }}" class="{{ attributes.button.class }}"> {{ button_text.add }}</a>
   </div>
   <table>
     <tr>
