added conditions to template

--- a/web/modules/custom/minute/templates/minute-odd-or-even-page.html.twig
+++ b/web/modules/custom/minute/templates/minute-odd-or-even-page.html.twig
@@ -1,6 +1,10 @@
 <section>
   <div>
-    {{ title }}
-    {{ node }}
+    {% if title %}
+      {{ title }}
+    {% endif %}
+    {% if node %}
+      {{ node }}
+    {% endif %}
   </div>
 </section>
